tests/snapshots/sfc/ts/script_setup__array_with_as_const.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


const SORT_TYPES = [

export default defineComponent({
  name: 'test',
  setup(__props) {

  { text: 'Latest', value: 'DESC' },
  { text: 'Oldest', value: 'ASC' }
] as const;
const sortType = ref<SortType>('DESC');

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(sortType.value), 1 /* TEXT */))
}
}

})
