tests/snapshots/sfc/ts/script_setup__defineemits_array_syntax.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default defineComponent({
  name: 'test',
  emits: ["update", "change"],
  setup(__props, { emit: __emit }) {

const emit = __emit
function onClick() {
  emit('update', 1)
}

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { onClick: onClick }, "Click"))
}
}

})
