tests/snapshots/sfc/ts/script_setup__defineemits_with_typed_function_signatures.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref } from "vue"


export default defineComponent({
  name: 'test',
  emits: ["update", "delete", "submit"],
  setup(__props, { emit: __emit }) {

const emit = __emit

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { onClick: $event => (_unref(emit)('submit')) }, "Submit", 8 /* PROPS */, ["onClick"]))
}
}

})
