tests/snapshots/sfc/ts/script_setup__defineemits_with_vue_33_shorthand.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { emit: __emit }) {

const emit = __emit

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", {
      onClick: _cache[0] || (_cache[0] = ($event: any) => (emit('submit')))
    }, "Submit"))
}
}

})
